# ecen574a

Assignment3/: gen_build.sh  testAll.py
Assignment3/mmarsh5_hdlc_halvorsen_hlsyn/: CMakeLists.txt  README.txt
Assignment3/mmarsh5_hdlc_halvorsen_hlsyn/src/: convert.cpp  convert.h  critical.cpp  critical.h  fds.h  hlsyn.cpp  netlist.h  obj.h  operation.h
Assignment3/xcode_project/: generate_project.sh
